# quickie

./: .editorconfig  .quickieconfig  LICENSE  README.md  autogen.sh  configure.ac
debian/: changelog  control  copyright  gbp.conf  postinst
example/my/module/: __main__.py
src/: Makefile.am  main.c  quickieconfig.py  quickierc.py
